xray_scattering_discrimination/slurm/run_data_collection.log-621739
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
  File "/home/minseokhwan/xray_projects/xray_scattering_discrimination/run_data_collection.py", line 348
    xray_target_material = 'W',
    ^
SyntaxError: invalid syntax
